# influxdb-rust

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.j2  README.md  README.tpl  RELEASING.md  doc2readme.toml  docker-compose.integrationtest.yaml  tarpaulin-report.html  tarpaulin-report.json  update_cargo-readme.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
auxiliary/: README.tpl  check_readme_consistency.sh  update_cargo-readme.sh
benches/: Cargo.toml  client.rs
data/data/_internal/monitor/1/: fields.idx
data/meta/: meta.db
data/wal/_internal/monitor/1/: _00001.wal
influxdb/: Cargo.toml
influxdb/src/: error.rs  lib.rs
influxdb/src/client/: mod.rs
influxdb/src/integrations/: serde_integration.rs
influxdb/src/integrations/serde_integration/: de.rs  mod.rs
influxdb/src/query/: consts.rs  line_proto_term.rs  mod.rs  read_query.rs  write_query.rs
influxdb/tests/: derive_integration_tests.rs  integration_tests.rs  integration_tests_dbrp.rs  integration_tests_v1.rs  integration_tests_v2.rs  utilities.rs
influxdb_derive/: Cargo.toml  README.md
influxdb_derive/src/: lib.rs  writeable.rs
src/: error.rs  lib.rs  main.rs
src/client/: mod.rs
src/integrations/: serde_integration.rs
src/query/: consts.rs  line_proto_term.rs  mod.rs  read_query.rs  write_query.rs
tests/: integration_tests.rs
