[workspace]
members = ["influxdb", "influxdb_derive", "benches"]
resolver = "2"

[workspace.package]
authors = ["Gero Gerke <git@gero.dev>", "Dominic <git@msrd0.de>"]
edition = "2021"
rust-version = "1.71"
license = "MIT"
repository = "https://github.com/influxdb-rs/influxdb-rust"

[workspace.lints.rust]
bare_trait_objects = "forbid"
elided_lifetimes_in_paths = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }
unsafe_code = "forbid"

[workspace.lints.clippy]
multiple_bound_locations = "allow" # clippy has wrong opinions
needless_doctest_main = "allow"

[patch.crates-io]
influxdb = { path = "./influxdb" }
influxdb_derive = { path = "./influxdb_derive" }
