# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb"
version = "0.7.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license.workspace = true
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository.workspace = true

[lints]
workspace = true

[[test]]
name = "derive_integration_tests"
path = "tests/derive_integration_tests.rs"
required-features = ["chrono"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"], default-features = false, optional = true }
futures-util = "0.3.17"
http = "0.2.4"
influxdb_derive = { version = "0.5.1", optional = true }
lazy-regex = "3.1"
reqwest = { version = "0.11.4", default-features = false }
serde = { version = "1.0.186", optional = true }
serde_derive = { version = "1.0.186", optional = true }
serde_json = { version = "1.0.48", optional = true }
surf = { version = "2.2.0", default-features = false, optional = true }
thiserror = "1.0"
time = { version = "0.3.39", optional = true }

[features]
default = ["serde", "reqwest-client-rustls"]
derive = ["dep:influxdb_derive"]
serde = ["dep:serde", "dep:serde_derive", "dep:serde_json"]

# http clients
reqwest-client-rustls = ["reqwest/rustls-tls-webpki-roots"]
reqwest-client-native-tls = ["reqwest/native-tls-alpn"]
reqwest-client-native-tls-vendored = ["reqwest/native-tls-vendored"]

# etc
time = ["dep:time"]
chrono = ["dep:chrono"]

[dev-dependencies]
indoc = "1.0"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
