[package]
name = "influxdb"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license.workspace = true
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository.workspace = true

[lints]
workspace = true

[[test]]
name = "derive_integration_tests"
path = "tests/derive_integration_tests.rs"
required-features = ["chrono"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"], default-features = false, optional = true }
futures-util = "0.3.17"
http = "1.3.1"
influxdb_derive = { version = "0.6.0", optional = true }
lazy-regex = "3.1"
reqwest = { version = "0.13", features = ["query"], default-features = false }
serde = { version = "1.0.186", optional = true }
serde_derive = { version = "1.0.186", optional = true }
serde_json = { version = "1.0.48", optional = true }
thiserror = "2.0.16"
time = { version = "0.3.39", optional = true }

[features]
default = ["http2", "rustls", "serde", "system-proxy"]
derive = ["dep:influxdb_derive"]
serde = ["dep:serde", "dep:serde_derive", "dep:serde_json"]

# http client features
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
gzip = ["reqwest/gzip"]
http2 = ["reqwest/http2"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls"]
system-proxy = ["reqwest/system-proxy"]
zstd = ["reqwest/zstd"]

# etc
time = ["dep:time"]
chrono = ["dep:chrono"]

[dev-dependencies]
indoc = "2.0.6"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
