# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb_derive"
version = "0.5.1"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "Private implementation detail of the influxdb crate"
keywords = ["influxdb", "database", "influx", "derive"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/influxdb-rs/influxdb-rust"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
