# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb_derive"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Private implementation detail of the influxdb crate"
keywords = ["influxdb", "database", "influx", "derive"]
license.workspace = true
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
syn-path = "2.1"
